--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <link rel="icon" type="image/x-icon" href="icons/Screenshot_2023-11-19_191152-removebg-preview.png">
     <title>YouTube.com Clone</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
